# rehome

./: .dockerignore  .editorconfig  .flaskenv  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  gunicorn.conf.py  package-lock.json  package.json  prek.toml  pyproject.toml  setup.cfg
.github/: dependabot.yml  renovate.json
.github/workflows/: auto-build-on-base-image-change.yml  build-docker-image.yml  build.yml  check-base-image-updates.yml  check-for-base-image-updates.yml  ci.yml  docker.yml  lint.yml  release.yml  test.yml
docker/: .env.example  Dockerfile  compose.yaml  docker-compose.dev.yml  entrypoint.sh
docker/entrypoint.d/: 10-config.sh  20-fix-perms.sh  30-migrate-db.sh  40-build-assets.sh  50-start.sh
docker/rootfs/: docker-entrypoint.sh  docker-healthcheck.sh
docker/rootfs/etc/cont-init.d/: 10-config  20-fix-perms  30-migrate-db  40-assets
docker/rootfs/etc/services.d/app/: run
rehome/: __init__.py  auth.py  config.py  debug.py  extensions.py  meta.py  paths.py  scheduler.py  util.py  version.py
rehome/assets/: assets.yml
rehome/assets/scss/: main.scss
rehome/assets/scss/includes/: _fonts.scss
rehome/cli/: token.py  upload.py
rehome/db/migrations/: __init__.py  alembic.ini  env.py
rehome/db/migrations/versions/: 3b5782edf9fd_add_uploads_table.py  3dfa0778a309_change_name_and_original_name_types_to_.py  4b921713d879_use_text_instead_of_varchar_thanks_bean.py  57ede73a71b8_require_file_hashes_be_unique.py  66f8a8ea21a9_add_uploads_table.py  7c221e1bf861_add_auth_tokens_table.py  b0f653a2f1a0_make_mimetype_non_nullable_remove_index_.py  d1e1f6b8fd04784c_uploads_name_sole_primary_key.py  e4f5a2b9c1d3_rename_name_to_slug_original_name_to_name.py  f3f2a17153b8_rename_name_and_url_columns.py  f8a3c2e1b7d5_add_expires_at_to_uploads.py
rehome/forms/: upload.py
rehome/models/: __init__.py  _type_decorators.py  auth_token.py  upload.py
rehome/resources/config/: config.yml  default.toml  logging.yml  settings.toml  settings.yml
rehome/static/css/: main.css
rehome/static/js/: viewer-toggle.js  viewer.js
rehome/templates/: base.html
rehome/templates/errors/: 404.html
rehome/templates/includes/: menu.html  nav_links.html  nav_links.html.j2
rehome/templates/layouts/: base.html  base.html.j2  error.html  error.html.j2  viewer.html.j2
rehome/templates/pages/: index.html  index.html.j2  upload_view.html.j2  upload_view_markdown.html.j2
rehome/views/: __init__.py  pages.py  uploads.py
scripts/: rehome-cli.py  share.sh
tests/: conftest.py  test_auth.py  test_migrations.py  test_pages.py  test_token_cli.py  test_uploads.py
tests/fixtures/: lorem.txt
