[project]
name = "rehome"
description = ""
authors = [{ name = "Lee Watson", email = "me@lwatson.dev" }]
version = "1.4.4"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "flask (>=3.0.0,<4.0.0)",
    "gunicorn>=23.0.0",
    "flask-db>=0.4.1",
    "flask-httpauth>=4.8.0",
    "flask-wtf>=1.2.2",
    "libgravatar>=1.0.4",
    "python-dotenv>=1.1.0",
    "python-magic>=0.4.27",
    "sentry-sdk[flask,sqlalchemy]>=2.27.0",
    "dynaconf>=3.2.10",
    "flask-sqlalchemy-lite>=0.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.14.0",
    "shellcheck-py>=0.10.0.1",
    "flask-debugtoolbar>=0.16.0",
    "yamllint>=1.37.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
force-exclude = true
extend-exclude = ["docker/data/", "docker/config/", "instance/", "tests/fixtures/"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FIX",
    "FLY",
    "FURB",
    "G010",
    "G101",
    "G201",
    "G202",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

# ruff format compatibility
ignore = [
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "E501",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "PLR2004", "S101", "S105", "S106", "S607"]
