[project]
name = "rehome"
description = ""
authors = [{ name = "Lee Watson", email = "me@lwatson.dev" }]
version = "1.20.4"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14,<3.15"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "gunicorn[gthread]>=26.0.0",
    "flask-db>=0.4.1",
    "flask-httpauth>=4.8.1",
    "flask-wtf>=1.3.0",
    "libgravatar>=1.0.4",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "sentry-sdk[flask,sqlalchemy]>=2.63.0",
    "dynaconf>=3.2.13",
    "flask-sqlalchemy-lite>=0.2.1",
    "humanize>=4.15.0",
    "rich>=15.0.0",
    "apscheduler>=3.11.2,<4.0.0",
    "mistune>=3.2.1",
    "nh3>=0.3.5",
]

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "ruff>=0.15.18",
    "shellcheck-py>=0.11.0.1",
    "flask-debugtoolbar>=0.16.0",
    "yamllint>=1.38.0",
    "pytest>=9.1.0",
    "hadolint-py>=2.14.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
force-exclude = true
extend-exclude = [
    "docker/data/",
    "docker/config/",
    "instance/",
    "tests/fixtures/",
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FIX",
    "FLY",
    "FURB",
    "G010",
    "G101",
    "G201",
    "G202",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

# ruff format compatibility.
ignore = [
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "E501",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "PLR2004", "S101", "S105", "S106", "S607"]
